add pag renda variável

--- a/home.html
+++ b/home.html
@@ -142,10 +142,10 @@
                     <div class="card mt-4">
                         <div class="row align-items-center justify-content-center">
                             <div class=" col-sm-12 col-md-2 text-center img-fluid">
-                                <!-- <img class=" img-fluid" src="img/img-passo1.png" alt="Card image cap"> -->
-                                <lottie-player src="https://assets5.lottiefiles.com/packages/lf20_ihxIYc.json"
+                                <img class=" img-fluid" src="img/pc.svg" alt="Card image cap">
+                                <!-- <lottie-player src="https://assets5.lottiefiles.com/packages/lf20_ihxIYc.json"
                                     background="transparent" speed="1" style="width: 100%; height: 100%;" loop autoplay>
-                                </lottie-player>
+                                </lottie-player> -->
                             </div>
                             <div class="col-sm-12 col-md-10">
                                 <div class="card-body">
@@ -282,7 +282,7 @@
                             <div class="card card-cascade narrower">
                                 <!-- Card image -->
                                 <div class="view view-cascade overlay">
-                                    <img class="card-img-top" src="img/taxa.png" alt="Card image cap">
+                                    <img class="card-img-top" src="img/investimentos.png" alt="Card image cap">
 
                                 </div>
 
@@ -312,7 +312,7 @@
                             <div class="card card-cascade narrower">
                                 <!-- Card image -->
                                 <div class="view view-cascade overlay">
-                                    <img class="card-img-top" src="img/taxa.png" alt="Card image cap">
+                                    <img class="card-img-top" src="img/investimentos.png" alt="Card image cap">
                                     <a>
                                         <div class="mask rgba-white-slight waves-effect waves-light"></div>
                                     </a>
