--- a/renda_variavel.html
+++ b/renda_variavel.html
@@ -30,7 +30,7 @@
         <div class=" bg-degrade header-inner">
             <div class="d-flex justify-content-center text-light">
                 <div class="bounce-in-top">
-                    <h1>Renda fixa</h1>
+                    <h1>Renda Variável</h1>
                 </div>
             </div>
             <!-- <div class="d-flex justify-content-center ">
@@ -72,7 +72,7 @@
                                 <div class="tab-content py-3 px-3 px-sm-0" id="nav-tabContent">
                                     <div class="tab-pane fade show active" id="nav-home" role="tabpanel"
                                         aria-labelledby="nav-home-tab">
-                                        <h2 class="color-gray m-4 text-center">O que é Renda Fixa?</h2>
+                                        <h2 class="color-gray m-4 text-center">O que é Renda Variável?</h2>
                                         <p class="mt-50">
                                             A <b class="color-blue"> renda fixa</b> é uma modalidade de
                                             investimento
@@ -94,83 +94,124 @@
                                         <h2 class="color-gray m-4 text-center">Quais os Tipos?</h2>
                                         <div class="row align-items-center justify-content-center">
                                             <div class="col-md-3 col-sm-12">
-                                                <img src="img/example-19.svg" alt="mulher segurando um cofrinho"
+                                                <img src="img/acoes.svg" alt="mulher segurando um cofrinho"
                                                     class="img-fluid text-center">
 
                                             </div>
                                             <div class="col-md-9 col-sm-12 mt-4">
                                                 <p>
-                                                    Existem alguns tipos de renda fixa , vou citar apenas os mais
-                                                    conhecidos
-                                                    como
-                                                    <b class="color-blue"> Tesouro direito, LCI/LCA e CDB</b>.
+                                                    Existem outros tipos de renda variável , mas como é guia para
+                                                    iniciantes vou citar apenas <b>ações</b> e <b>FIIs</b>.
                                                 </p>
                                             </div>
                                         </div>
-                                        <h3 class="color-gray text-center mt-50">Tesouro direito</h3>
+                                        <h3 class="color-gray text-center mt-50">Ações</h3>
                                         <div class="underline"></div>
                                         <p class="mt-50">
-                                            O Tesouro Direto é um Programa do Tesouro Nacional desenvolvido em parceria
-                                            com a B3 para venda de títulos públicos federais para pessoas físicas, de
-                                            forma 100% online. </p>
+                                            Ações são valores mobiliários emitidos por sociedades anônimas
+                                            representativos de uma parcela do seu capital social. Em outras palavras,
+                                            são títulos de propriedade que conferem a seus detentores (investidores) a
+                                            participação na sociedade da empresa.</p>
+
                                         <p>
-                                            Lançado em 2002, o Programa surgiu com o objetivo de democratizar o acesso
-                                            aos títulos públicos, permitindo aplicações a partir R$ 30,00.
+                                            Elas são emitidas por empresas que desejam principalmente captar recursos
+                                            para desenvolver projetos que viabilizem o seu crescimento.
                                         </p>
-                                        <p> O Tesouro Direto é uma excelente alternativa de investimento pois oferece
-                                            títulos com diferentes tipos de rentabilidade (prefixada, ligada à variação
-                                            da inflação ou à variação da taxa de juros básica da economia - Selic),
-                                            diferentes prazos de vencimento e também diferentes fluxos de remuneração.
-                                            Com tantas opções, fica fácil achar o título indicado para realizar seus
-                                            objetivos!
+                                        <p>
+                                            As ações podem ser de dois tipos, ordinárias ou preferenciais, sendo que a
+                                            principal diferença é que as ordinárias dão ao seu detentor direito de voto
+                                            nas assembleias de acionistas e as preferenciais permitem o recebimento de
+                                            dividendos em valor superior ao das ações ordinárias, bem como a prioridade
+                                            no recebimento de reembolso do capital.
                                         </p>
-                                        <p> Além de acessível e de apresentar muitas opções de investimento, o Tesouro
-                                            Direto oferece boa rentabilidade e liquidez diária, mesmo sendo a aplicação
-                                            de menor risco do mercado.
+                                        <p>
+                                            O primeiro lançamento de ações no mercado é chamado de Oferta Pública
+                                            Inicial (também conhecido pela sigla em inglês IPO – Initial Public Offer).
+                                            Após a abertura de capital e a oferta inicial, a empresa poderá realizar
+                                            outras ofertas públicas, conhecidas como “Follow on”.
                                         </p>
-                                        <div class="row mt-50">
-                                            <div class="col-md-6 col-sm-12">
-                                                <h3 class="color-gray text-center">LCI</h3>
-                                                <div class="underline"></div>
-                                                <p class="mt-50">
-                                                    A <b> LCI</b> é a Letra de Crédito Imobiliário. Ela é um
-                                                    investimento de
-                                                    renda fixa
-                                                    emitido pelos bancos.
+                                        <p>
+                                            As ofertas públicas de ações (IPO e Follow on) podem ser primárias e/ou
+                                            secundárias. Nas ofertas primárias, a empresa capta recursos novos para
+                                            investimento e reestruturação de passivos, ou seja, ocorre efetivamente um
+                                            aumento de capital da empresa. As ofertas secundárias, por sua vez,
+                                            proporcionam liquidez aos empreendedores, que vendem parte de suas ações,
+                                            num processo em que o capital da empresa permanece o mesmo, porém ocorre um
+                                            aumento na base de sócios
+                                        </p>
 
-                                                    Os recursos captados pelo emissor são utilizados para o
-                                                    financiamento das
-                                                    atividades do setor imobiliário. Em troca, ele oferece uma taxa de
-                                                    rentabilidade anual, que é definida no momento da compra.
+                                        <h5 class="text-center color-gray mt-50">Vou colocar uma lista com os códigos
+                                            para
+                                            compra de
+                                            ações vou usar de
+                                            exemplo a Empresa Klabin</h5>
 
-                                                    A LCI também possui uma data de vencimento estabelecida. Assim, ao
-                                                    investir
-                                                    nesse ativo, você já tem uma ideia de quanto o seu dinheiro irá
-                                                    render até o
-                                                    final do prazo.
-                                                </p>
+
+                                        <div class="accordion" id="accordionExample">
+                                            <div class="card">
+                                                <div class="card-header" id="headingOne">
+                                                    <h5 class="mb-0">
+                                                        <button class="btn btn-link" type="button"
+                                                            data-toggle="collapse" data-target="#collapseOne"
+                                                            aria-expanded="true" aria-controls="collapseOne">
+                                                            Código da ação ordinária <b class="color-blue"> Klbn3</b>
+                                                        </button>
+                                                    </h5>
+                                                </div>
+
+                                                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
+                                                    data-parent="#accordionExample">
+                                                    <div class="card-body">
+                                                        Ações Ordinárias (ON) são ações que proporcionam participação
+                                                        nos lucros e resultados da empresa que a emitiu. Conferem a seu
+                                                        titular o direito de voto em assembléia geral de acionistas,
+                                                        porém não dão direito preferencial a dividendos
+                                                    </div>
+                                                </div>
                                             </div>
-                                            <div class="col-md-6 col-sm-12 ">
-                                                <h3 class="color-gray text-center">LCA</h3>
-                                                <div class="underline"></div>
-                                                <p class="mt-50">
-                                                    A <b>LCA</b> é a Letra de Crédito do Agronegócio. Ela também é um
-                                                    título
-                                                    renda fixa
-                                                    emitido pelos bancos. A diferença para a LCI é o foco de
-                                                    investimento.
-
-                                                    Neste caso, a captação é direcionada para financiar as atividades do
-                                                    setor
-                                                    do agronegócio.
-
-                                                    Assim como para a LCI, a taxa de rentabilidade e a data de
-                                                    vencimento são
-                                                    definidas no momento da compra.
-                                                </p>
+                                            <div class="card">
+                                                <div class="card-header" id="headingTwo">
+                                                    <h5 class="mb-0">
+                                                        <button class="btn btn-link collapsed" type="button"
+                                                            data-toggle="collapse" data-target="#collapseTwo"
+                                                            aria-expanded="false" aria-controls="collapseTwo">
+                                                            Código da ação preferencial <b class="color-blue"> Klbn4</b>
+                                                        </button>
+                                                    </h5>
+                                                </div>
+                                                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
+                                                    data-parent="#accordionExample">
+                                                    <div class="card-body">
+                                                        Ações Preferenciais (PN) são ações que oferecem a seu detentor
+                                                        prioridade no recebimento de dividendos (muitas vezes em
+                                                        percentual mais elevado) e/ou, no caso de dissolução da empresa,
+                                                        no reembolso de capital. Normalmente, essas ações não concedem
+                                                        direito a voto em assembleias.
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="card">
+                                                <div class="card-header" id="headingThree">
+                                                    <h5 class="mb-0">
+                                                        <button class="btn btn-link collapsed color-gray" type="button"
+                                                            data-toggle="collapse" data-target="#collapseThree"
+                                                            aria-expanded="false" aria-controls="collapseThree">
+                                                            Código do conjunto de ações <b class="color-blue">
+                                                                Klbn11</b>
+                                                        </button>
+                                                    </h5>
+                                                </div>
+                                                <div id="collapseThree" class="collapse" aria-labelledby="headingThree"
+                                                    data-parent="#accordionExample">
+                                                    <div class="card-body">
+                                                        O código 11 representa um conjunto de ações ou seja ações Klbn3
+                                                        e Klbn4 sendo negociadas juntas como o código klbn11.
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
-                                        <h3 class="color-gray text-center mt-50">CDB</h3>
+
+                                        <h3 class="color-gray text-center mt-50">FIIs</h3>
                                         <div class="underline"></div>
                                         <p class="mt-50">
                                             O CDB é um dos investimentos mais conhecidos pelos investidores da renda
