--- a/home.html
+++ b/home.html
@@ -11,12 +11,6 @@
     <link rel="stylesheet" href="css/style.css">
 
     <!-- Font Awesome JS -->
-    <!-- <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js"
-        integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ"
-        crossorigin="anonymous"></script>
-    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js"
-        integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY"
-        crossorigin="anonymous"></script> -->
     <script src="https://kit.fontawesome.com/1ffaa2226d.js" crossorigin="anonymous"></script>
 </head>
 
@@ -53,13 +47,13 @@
                     <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false"
                         class="dropdown-toggle">Investimentos</a>
                     <ul class="collapse list-unstyled" id="pageSubmenu">
-                        <a href="selic.html">
+                        <a href="renda_variavel.html">
                             <li>
                                 Renda Fixa
                             </li>
                         </a>
                         <li>
-                            <a href="#">Renda Variável</a>
+                            <a href="renda_variavel.html">Renda Variável</a>
                         </li>
                         <!-- <li>
                             <a href="#">Page 3</a>
