--- a/renda_fixa.html
+++ b/renda_fixa.html
@@ -11,12 +11,7 @@
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <!-- Font Awesome JS -->
-    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js"
-        integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ"
-        crossorigin="anonymous"></script>
-    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js"
-        integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY"
-        crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/1ffaa2226d.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -283,7 +278,22 @@
 
                 </section>
                 <!-- ./Tabs -->
-
+                <div class="row mt-50">
+                    <div class="col">
+                        <a href="ipca.html">
+                            <button class="button">
+                                <span><i class="fas fa-arrow-left"></i> <b class="ml-2"></b></span>
+                            </button>
+                        </a>
+                    </div>
+                    <div class="col">
+                        <a href="renda_variavel.html">
+                            <button class="button">
+                                <span> <b class="mr-2"> </b><i class="fas fa-arrow-right"></i></span>
+                            </button>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
         <!-- jQuery CDN - Slim version (=without AJAX) -->
