ajustes no link

--- a/home.html
+++ b/home.html
@@ -47,7 +47,7 @@
                     <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false"
                         class="dropdown-toggle">Investimentos</a>
                     <ul class="collapse list-unstyled" id="pageSubmenu">
-                        <a href="renda_variavel.html">
+                        <a href="renda_fixa.html">
                             <li>
                                 Renda Fixa
                             </li>
@@ -325,7 +325,7 @@
                                         variar positivamente ou negativamente.
                                     </p>
                                     <!-- Button -->
-                                    <a href="#">
+                                    <a href="renda_variavel.html">
                                         <button class="button">
                                             <span>ACESSAR</span>
                                         </button>
