correção da página RV

--- a/renda_variavel.html
+++ b/renda_variavel.html
@@ -106,9 +106,10 @@
                                         <h2 class="color-gray mt-4 text-center">Quais os Tipos?</h2>
                                         <div class="underline"></div>
                                         <div class="row align-items-center justify-content-center">
-                                            <div class="col-md-3 col-sm-12">
-                                                <img src="img/acoes.svg" alt="mulher segurando um cofrinho"
-                                                    class="img-fluid text-center">
+                                            <div class="col-md-3 col-sm-12 text-center mt-4">
+                                                <img src="img/acoes.svg"
+                                                    alt="mulher um homem um porquinho voando e no fundo um gráfico"
+                                                    class="img-fluid ">
 
                                             </div>
                                             <div class="col-md-9 col-sm-12 mt-4">
@@ -159,7 +160,7 @@
                                             ações usando de
                                             exemplo a Empresa Klabin</h5>
 
-
+                                        <!-- accordion -->
                                         <div class="accordion mt-50" id="accordionExample">
                                             <div class="card-accordion">
                                                 <div class="card-header" id="headingOne">
@@ -167,7 +168,7 @@
                                                         <button class="btn btn-link" type="button"
                                                             data-toggle="collapse" data-target="#collapseOne"
                                                             aria-expanded="true" aria-controls="collapseOne">
-                                                            Código da ação ordinária <b class="color-blue"> Klbn3</b>
+                                                            Ação ordinária <b class="color-blue"> Klbn3</b>
                                                         </button>
                                                     </h5>
                                                 </div>
@@ -182,16 +183,18 @@
                                                     </div>
                                                 </div>
                                             </div>
+
                                             <div class="card-accordion">
                                                 <div class="card-header" id="headingTwo">
                                                     <h5 class="mb-0">
                                                         <button class="btn btn-link collapsed" type="button"
                                                             data-toggle="collapse" data-target="#collapseTwo"
                                                             aria-expanded="false" aria-controls="collapseTwo">
-                                                            Código da ação preferencial <b class="color-blue"> Klbn4</b>
+                                                            Ação preferencial <b class="color-blue"> Klbn4</b>
                                                         </button>
                                                     </h5>
                                                 </div>
+
                                                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
                                                     data-parent="#accordionExample">
                                                     <div class="card-body color-gray">
@@ -203,17 +206,19 @@
                                                     </div>
                                                 </div>
                                             </div>
+
                                             <div class="card-accordion">
                                                 <div class="card-header" id="headingThree">
                                                     <h5 class="mb-0">
                                                         <button class="btn btn-link collapsed color-gray" type="button"
                                                             data-toggle="collapse" data-target="#collapseThree"
                                                             aria-expanded="false" aria-controls="collapseThree">
-                                                            Código do conjunto de ações <b class="color-blue">
+                                                            Grupo de ações <b class="color-blue">
                                                                 Klbn11</b>
                                                         </button>
                                                     </h5>
                                                 </div>
+
                                                 <div id="collapseThree" class="collapse" aria-labelledby="headingThree"
                                                     data-parent="#accordionExample">
                                                     <div class="card-body color-gray">
@@ -222,10 +227,13 @@
                                                     </div>
                                                 </div>
                                             </div>
+
                                         </div>
+
                                         <div class="color-gray mt-4"> <i> <b> *Obs. </b>se você quiser comprar no
                                                 fracionado ou seja uma ação apenas então é só inserir o F no final do
-                                                código Exemplo: klbn3f </i></div>
+                                                código Exemplo: klbn3f </i>
+                                        </div>
 
 
                                         <h3 class="color-gray text-center mt-50">FIIs</h3>
@@ -236,7 +244,7 @@
                                             ao administrador, uma instituição financeira específica, constituir o fundo
                                             e realizar o processo de captação de recursos junto aos investidores através
                                             da venda de cotas.
-                                            
+
                                         </p>
                                         <p>
                                             Os recursos captados na venda das cotas poderão ser utilizados para a
@@ -276,8 +284,6 @@
                                                 http://www.b3.com.br</i>
                                         </div>
 
-
-
                                     </div>
                                     <!-- fim Quais os tipos -->
 
@@ -295,14 +301,22 @@
                                         <h2 class="color-gray mt-4 text-center">Como comprar?</h2>
                                         <div class="underline"></div>
                                         <p class="mt-50">
-                                            Primeiro você vai precisar de uma corretora ou um banco no caso do banco você tem que habilitar
-                                             home broker que é a plaforma de negociação das ações
-                                            , aí só entrar no home broker colocar o código da ação ou do FII e comprar pronto agora você é sócio de uma empresa ou cotista de fundo  Imobiliário (FII).
+                                            Primeiro você vai precisar de uma corretora ou um banco no caso do banco
+                                            você tem que habilitar
+                                            home broker que é a plaforma de negociação das ações
+                                            , aí só entrar no home broker colocar o código da ação ou do FII e comprar
+                                            pronto agora você é sócio de uma empresa ou cotista de fundo Imobiliário
+                                            (FII).
                                         </p>
+                                        <blockquote>
+                                            <p> <i> Importante para comprar e vender ações temos que respeitar o horario
+                                                    de
+                                                    negociação da B3.</i></p>
+                                        </blockquote>
 
-                                        <p> <i> Importante para comprar e vender ações temos que respeitar o horario de negociação da B3.</i></p>
                                         <p> Você encontra este horário na página oficial da B3
-                                        <a href="http://www.b3.com.br/pt_br/solucoes/plataformas/puma-trading-system/para-participantes-e-traders/horario-de-negociacao/acoes/" target="-blank" > ver horário</a></p>
+                                            <a href="http://www.b3.com.br/pt_br/solucoes/plataformas/puma-trading-system/para-participantes-e-traders/horario-de-negociacao/acoes/"
+                                                target="-blank"> ver horário</a></p>
 
                                         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                                             <ol class="carousel-indicators">
@@ -313,8 +327,7 @@
                                             </ol>
                                             <div class="carousel-inner">
                                                 <div class="carousel-item active">
-                                                    <img class="d-block w-100" src="img/klbn11.png"
-                                                        alt="First slide">
+                                                    <img class="d-block w-100" src="img/klbn11.png" alt="First slide">
                                                     <div class="carousel-caption d-none d-md-block card-img-bg">
                                                         <h5>Compra de um lote de ações</h5>
                                                         <p class="text-light">Valor do lote R$
@@ -322,12 +335,11 @@
                                                     </div>
                                                 </div>
                                                 <div class="carousel-item">
-                                                    <img class="d-block w-100" src="img/mxrf11.png"
-                                                        alt="Second slide">
+                                                    <img class="d-block w-100" src="img/mxrf11.png" alt="Second slide">
                                                     <div class="carousel-caption d-none d-md-block card-img-bg">
                                                         <h5>Compra de uma cota</h5>
                                                         <p class="text-light">Valor de uma cota R$
-                                                           11,23.</p>
+                                                            11,23.</p>
                                                     </div>
                                                 </div>
                                                 <!-- <div class="carousel-item">
@@ -349,7 +361,6 @@
 
                                     </div>
                                 </div>
-
                             </div>
                         </div>
                     </div>
